# videoFromAndroid

./: .gitignore  DIARY.md  PROJECT_STATUS_SUMMARY.md  README.md  README_OLD_backup.md  README_zh.md  WIFI_ACCESS.md  activity_main.xml  build.gradle.kts  gradle.properties  quick_start.sh  settings.gradle.kts  sms9160Capability.txt  sms9280Capability.txt  test_commands.py  test_recomo_rgb_ros2.sh  test_websocket.py
app/: build.gradle.kts  proguard-rules.pro
camviewer/: build.gradle.kts  proguard-rules.pro
config/: NETWORK_QUICK_REF.md  README.md  load_network_config.sh  network_config.py  t8space.env  zerotier.env
device_info/: README.md  systemChart.txt
docs/: ARCHITECTURE_UPDATES_2025-11-11.md  CAMVIEWER_CLARIFICATIONS.md  CAMVIEWER_IMPLEMENTATION_PLAN.md  DIARY.md  NETWORK_PROTOCOLS.md  ORIN_SERVICE_CONTROL.md  ORIN_TARGET_API.md  ProjectSetup.md  ROS2_TOPICS_REFERENCE.md  SYSTEM_ARCHITECTURE.md  THREE_WAY_CAMERA_CONTROL.md  WEBSOCKET_ARCHITECTURE.md  WIFI_ACCESS.md
orin/: ARCHITECTURE.md  CAMERA_CONTROL_TEST_RESULTS.md  MEDIA_API_README.md  QUICKSTART.md  README.md  ROI_UPDATE.md  TARGET_API_README.md  camera_control_relay.py  listen_target_roi.py  media_api.py  recomo_service_control.service  requirements-media-api.txt  requirements-target-api.txt  requirements.txt  restart_recomo_api.sh  service_control_api.py  setup_camera_relay.sh  (+17 more)
orin/ros2_camcontrol/: CMakeLists.txt  package.xml  setup.py
orin/ros2_camcontrol/msg/: CameraCommand.msg  CameraTelemetry.msg
orin/ros2_camcontrol/ros2_camcontrol/: camera_control_test.py  image_saver.py  ws_to_image.py
(+84 files in other folders)
