<?xml version="1.0"?>
<package format="3">
  <name>ros2_camcontrol</name>
  <version>0.1.0</version>
  <description>WS H.264 ingest to ROS2 sensor_msgs/Image for CUDA pipelines</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gir1.2-gstreamer-1.0</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

